objects/PC_ProgramRegionUserHistory__c.object
<CustomObject>
    <fields>
        <fullName>PC_CareTeamAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store the name of the Care Team Account of the Program Region User Mapping record for which Associate record is created.</description>
        <label>Care Team Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Program Region User Histories</relationshipLabel>
        <relationshipName>PC_ProgramRegionUserHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_CareTeamRole__c</fullName>
        <description>This field is used to store the Care Team Role of the Program Region User Mapping record for which Associate record is created.</description>
        <label>Care Team Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HCO</fullName>
                </value>
                <value>
                    <fullName>Treating Physician</fullName>
                </value>
                <value>
                    <fullName>Care Coordinator</fullName>
                </value>
                <value>
                    <fullName>Reimbursement Specialist</fullName>
                </value>
                <value>
                    <fullName>Field Reimbursement Manager</fullName>
                </value>
                <value>
                    <fullName>Case Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_CareTeamUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store the Care Team Member of the Program Region User Mapping record for which Associate record is created.</description>
        <label>Care Team User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PC_ProgramRegionUserHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store the Case for which Associate record is created.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Program Region User Histories</relationshipLabel>
        <relationshipName>PC_ProgramRegionUserHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_EngagementProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store the Engagement Program of the Program Region User Mapping record for which Associate record is created.</description>
        <label>Engagement Program</label>
        <referenceTo>PC_Engagement_Program__c</referenceTo>
        <relationshipLabel>Program Region User Histories</relationshipLabel>
        <relationshipName>PC_ProgramRegionUserHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_QueueOrGroupName__c</fullName>
        <description>Contains the Name of the User Queue or Group of the Association. Leave it blank, if the PC_RoleType is blank.</description>
        <inlineHelpText>Contains the Name of the User Queue or Group of the Association. Leave it blank, if the PC_RoleType is blank.</inlineHelpText>
        <label>User Queue/Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store the Region of the Program Region User Mapping record for which Associate record is created.</description>
        <label>Region</label>
        <referenceTo>PC_Region__c</referenceTo>
        <relationshipLabel>Program Region User Histories</relationshipLabel>
        <relationshipName>PC_ProgramRegionUserHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_RoleType__c</fullName>
        <description>Indicates if the role type is User Queue or Group.
Blank value signifies anything other than Queue or Group.</description>
        <inlineHelpText>Indicates if the role type is User Queue or Group.
Blank value signifies anything other than Queue or Group.</inlineHelpText>
        <label>Role Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Program Region User History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PRUH{0}</displayFormat>
        <label>Program Region User History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Region User History</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>PC_User_and_Account_values_check</fullName>
        <active>true</active>
        <description>This rule will ensure to have value in only one of &apos;Care Team Account&apos; and &apos;Care Team User&apos;.</description>
        <errorConditionFormula>OR(AND(ISBLANK( PC_CareTeamAccount__c ), ISBLANK( PC_CareTeamUser__c ) ),
AND( NOT(ISBLANK( PC_CareTeamAccount__c )), NOT(ISBLANK( PC_CareTeamUser__c ) ) ))</errorConditionFormula>
        <errorMessage>Please enter only one of &apos;Care Team Account&apos; and &apos;Care Team User&apos;.</errorMessage>
    </validationRules>
</CustomObject>